--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "mosaic-react",
+  "name": "globalseeker-react",
+  "private": true,
   "version": "0.1.0",
   "scripts": {
     "dev": "vite",
@@ -7,21 +8,72 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@babel/core": "^7.22.1",
+    "@babel/preset-env": "^7.22.4",
+    "@babel/preset-react": "^7.22.3",
+    "@popperjs/core": "^2.11.0",
+    "@react-three/drei": "^9.74.0",
     "@tailwindcss/forms": "^0.5.3",
+    "@videosdk.live/react-sdk": "^0.1.74",
+    "antd": "^5.5.2",
+    "axios": "^0.24.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "bootstrap": "^4.6.1",
     "chart.js": "^4.2.1",
     "chartjs-adapter-moment": "^1.0.1",
+    "config": "^3.3.6",
+    "connect-ensure-login": "^0.1.1",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^4.6.0",
+    "cookie-parser": "^1.4.6",
+    "cron": "^1.8.2",
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
+    "express-session": "^1.17.2",
+    "flv.js": "^1.5.0",
+    "gl-matrix": "^3.4.3",
+    "history": "^5.1.0",
+    "jquery": "^3.6.0",
+    "js-md5": "^0.7.3",
+    "md5": "^2.3.0",
     "moment": "^2.29.4",
+    "mongoose": "^6.0.14",
+    "nice-color-palettes": "^3.0.0",
+    "node-media-server": "^2.3.8",
+    "passport": "^0.5.0",
+    "passport-local": "^1.0.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-flatpickr": "^3.10.13",
+    "react-native-nodemediaclient": "^0.2.21",
     "react-router-dom": "^6.10.0",
-    "react-transition-group": "^4.4.5"
+    "react-three-fiber": "^6.0.13",
+    "react-transition-group": "^4.4.5",
+    "shortid": "^2.2.16",
+    "tailwindcss": "^3.3.2",
+    "universal-cookie": "^4.0.4",
+    "use-cannon": "^0.5.3",
+    "video.js": "^7.17.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.4",
+    "@babel/preset-react": "^7.16.0",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.14",
+    "babel-loader": "^8.2.3",
+    "css-loader": "^6.5.1",
+    "file-loader": "^6.2.0",
+    "mini-css-extract-plugin": "^2.4.5",
+    "node-sass": "^6.0.1",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.3.1",
+    "sass-loader": "^12.3.0",
+    "style-loader": "^3.3.1",
+    "supervisor": "^0.12.0",
+    "tailwindcss": "^3.3.2",
+    "url-loader": "^4.1.1",
     "vite": "^4.2.1"
   }
 }
